--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/app.css" />
   </head>
   <body>
+    <h1 class="cim">Bummmmmmm!</h1>
     <!-- Blue Playlist Container -->
     <div id="blue-playlist-container">
       <!-- Amplitude Player -->
